# offline-md-editor-viewer

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  portfolio.md
.docsweep/backup/: pending_note-article-v0.1.1.md.1783126379  plan_bug_security_quality_audit_2026-06-15.md.1783126379  plan_fable_audit_2026-07-03.md.1783126379  plan_npm-npx-launcher.md.1783126379  plan_security_vulnerability_quality_audit.md.1783126379  plan_ultracode_audit_2026-06-14.md.1783126379  plan_ultracode_audit_2026-06-16.md.1783126379  plan_ultracode_audit_2026-06-25.md.1783126379
.github/workflows/: release.yml
.obsidian/: workspace.json
LICENSES/: desktop-third-party.txt
apps/browser/: offline-md-editor-viewer.html
apps/desktop/: package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  about.hbs  about.toml  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
archive/: plan_codeblock_syntax_highlight.md  plan_filetree_sticky_favorites.md  plan_multiselect_file_tree.md  plan_rescan-dir-btn.md  plan_source_improvement_survey.md  plan_source_improvement_survey_c1_state-object.md  plan_source_improvement_survey_c2_load-crud-dedup.md  plan_source_improvement_survey_c4_utils-errors-i18n.md  plan_source_improvement_survey_c6_security-hardening.md
demo/: README.ja.md  meeting-notes.md  project-plan.md
docs/: license-check-v0.1.0.md
(+29 files in other folders)
